Java 9 support